k8s/apps/websites/buffalo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buffalo-site
  namespace: websites
  labels:
    app: buffalo-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buffalo-site
  template:
    metadata:
      labels:
        app: buffalo-site
    spec:
      containers:
      - name: buffalo-site
        image: nginx:alpine
        volumeMounts:
        - name: buffalo-content
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: buffalo-content
        nfs:
          server: 192.168.178.102
          path: /mnt/nfs/buffalo
