k8s/apps/websites/buffalo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buffalo-site
spec:
  selector:
    app: buffalo-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
